# nRF52840-mini-BLE-Keyboard

./: .gitignore  AGENTS.md  CMakeLists.txt  prj.conf
.trellis.before-fix/: .template-hashes.json
docs/: hardware_resources_agent_netlist.md  mini_keyboard_solution.md  按键矩阵实现方案.md  第05章项目实现.md
include/config/: app_config.h  app_config_store.h
include/display/: status_screen.h  status_screen_model.h
include/hid/: hid_consumer.h  hid_flowctrl.h  hid_report.h  hid_usage.h
include/host/: host_comm.h  host_frame.h  host_protocol.h
include/input/: encoder_action.h  encoder_manager.h  input_manager.h
include/keyboard/: keyboard_led_state.h
include/keymap/: keymap.h
include/mode/: mode_manager.h  mode_selector.h
include/power/: battery_monitor.h  ip5306.h  power_manager.h  power_policy.h  power_state.h
include/rgb/: rgb_effect.h  rgb_hw.h  rgb_keymap.h  rgb_manager.h  rgb_policy.h  rgb_types.h
include/transport/: ble_bas_adapter.h  transport.h  transport_ble_security.h
pc_gui/: __init__.py  main.py  requirements.txt
pc_gui/device/: device_client.py  device_models.py  device_protocol.py  error_codes.py  frame_codec.py  mock_transport.py  serial_transport.py  transport_base.py
pc_gui/proto/: __init__.py  device_comm_pb2.py  generate_proto.py
pc_gui/resources/: style.qss
pc_gui/tests/: test_device_models.py  test_device_protocol.py  test_frame_codec.py  test_main.py  test_serial_transport.py
pc_gui/ui/: developer_log_page.py  device_page.py  device_worker.py  encoder_page.py  main_window.py  rgb_page.py  system_page.py
proto/: device_comm.options  device_comm.proto
scripts/: build.ps1  ncs-env.ps1
src/: main.c
src/config/: app_config.c  app_config_store.c
src/display/: status_screen.c  status_screen_input.c  status_screen_lvgl.c  status_screen_model.c
src/hid/: hid_consumer.c  hid_flowctrl.c  hid_report.c
tests/: app_config_test.c  battery_monitor_test.c  ble_bas_adapter_test.c  encoder_action_test.c  hid_consumer_test.c  hid_flowctrl_test.c  host_frame_test.c  host_protocol_test.c  ip5306_status_test.c  keyboard_led_state_test.c  keymap_hid_test.c  mode_selector_test.c  power_policy_test.c  power_state_test.c  rgb_effect_test.c  rgb_keymap_test.c  rgb_policy_test.c  status_screen_model_test.c  transport_ble_security_policy_test.c
(+75 files in other folders)
